# reduce-algebra

./: .deepsource.toml  .gitattributes  .gitignore  ACN-projects.doc  ACN-projects.txt  AUTHORS  BUGS  BUILDING  Contributor-Release.txt  DEPENDENCY_TRACKING  INSTALL  LGPLMANIFEST  LICENSE  MANIFEST  Makefile  Makefile.am  Makefile.in  Makefile.new  README  README.BUILDING  README.md  SECURITY.md  aclocal.m4  all-exe.sh  all-img.sh  autogen.sh  canary.c  configure  configure.ac  fetchfetch.sh  fetchreduce.sh  lgpl-distribution-mechanism-opinion.txt  macports-setup-m1.sh  makewin.sh  option-processing.txt  parbuild.sh  rebuild.sh  revision_history.txt  setup-win-cache.sh  time-current-version.sh  (+3 more)
csl/: Makefile  Makefile.am  Makefile.in  README.testprogram  aclocal.m4  autogen.sh  check-copies.sh  config.h.in  configure  configure.ac  kb.txt  libtool  libwindow.h  solaris-notes.txt  testprogram.c  testprogram.cpp  window.c  window.cpp
csl/cslbase/: 0README  0copyrt  0license  0notes  0rationale  AUTHORS  BSD  COPYING  ChangeLog  INSTALL  LineEditing.txt  Makefile  Makefile.am  Makefile.in  Makefile.webgui  Makefile.windows  NEWS  PLATFORM.NOTES  README  README.fontconfig  README.mac.r  TODO  X  aclocal.m4  acnutil.h  addresources.c  addresources.cpp  allocate.cpp  allocate.h  allocate_test.cpp  alloctest.cpp  arith-compare.cpp  arith-defs.h  arith-elem.cpp  arith-float.cpp  arith-float128.cpp  arith-gcdn.cpp  arith-headers.h  arith-logops.cpp  arith-misc.cpp  (+623 more)
csl/cslbase-nothrow/: 0README  AUTHORS  BSD  COPYING  Makefile.am  Makefile.in  Makefile.mac-universal  NEWS  PLATFORM.NOTES  README  README.fontconfig  RELINK.PLATFORM.NOTES  addresources.cpp  allocate.cpp  allocate.h  allocate_test.cpp  alloctest.cpp  arith-compare.cpp  arith-float.cpp  arith-float128.cpp  arith-gcdn.cpp  arith-logops.cpp  arith-modular.cpp  arith-plus.cpp  arith-print.cpp  arith-setup.cpp  arith-times.cpp  arith.h  arith01.cpp  arith02.cpp  arith03.cpp  arith04.cpp  arith05.cpp  arith06.cpp  arith07.cpp  arith08.cpp  arith09.cpp  arith10.cpp  arith11.cpp  arith12.cpp  (+264 more)
csl/embedded/: Makefile  Makefile.proc  Makefile.x64  README  arith02.c  arith06.c  arith07.c  arith11.c  arith12.c  bytes.c  bytes1.c  clsyms.h  config.h  csl.c  cslerror.h  cslmpi.c  cslread.c  cslread.h  driver.c  embedcsl.c  entries.h  eval1.c  eval2.c  eval3.c  externs.h  fasl.c  fns1.c  fns2.c  fns3.c  fwin.c  fwin.h  gc.c  headers.h  machine.h  machineid.c  opnames.c  print.c  proc.h  reduce.img  restart.c  (+125 more)
csl/fox/: AUTHORS  CHANGED  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.sub  configure  configure.ac  configure.in  fox.lsm  fox.pc.in  fox.spec.in  index.html  ltmain.sh  mkinstalldirs
csl/foxtests/: ControlPanel.cpp  Makefile.am  Makefile.in  README  configure  configure.ac  dctest.cpp  groupbox.cpp  hello2.cpp  minheritance.cpp  tabbook.cpp
csl/generated-c/: csl.img  reduce.img  u01.c  u01.cpp  u01.lsp  u02.c  u02.cpp  u02.lsp  u03.c  u03.cpp  u03.lsp  u04.c  u04.cpp  u04.lsp  u05.c  u05.cpp  u05.lsp  u06.c  u06.cpp  u06.lsp  u07.c  u07.cpp  u07.lsp  u08.c  u08.cpp  u08.lsp  u09.c  u09.cpp  u09.lsp  u10.c  u10.cpp  u10.lsp  u11.c  u11.cpp  u11.lsp  u12.c  u12.cpp  u12.lsp  u13.c  u13.cpp  (+142 more)
csl/jlisp/: 00README.txt  Attribute_info.java  AutoLoad.java  BuiltinFunction.java  ByteArray.java  ByteCodes.java  ByteOpt.java  Bytecode.java  CONSTANT_Class_info.java  CONSTANT_Fieldref_info.java  CONSTANT_Methodref_info.java  CONSTANT_NameAndType_info.java  CONSTANT_Utf8_info.java  CWin.java  CallAs.java  ClassDescription.java  Code_attribute.java  Cons.java  Cp_info.java  DoubleWriter.java  EOFException.java  Exceptions_attribute.java  ExtensionFileFilter.java  Fasl.java  Field_info.java  FnWithEnv.java  Fns.java  Fns1.java  Fns2.java  Fns3.java  Fns4.java  Gensym.java  InputPane.java  Interpreted.java  JavaFn.java  Jlisp.java  JlispClassLoader.java  LispBigInteger.java  LispCounter.java  LispDigester.java  (+50 more)
csl/new-embedded/: Makefile  README  make-image.c  make-image.cpp
csl/reduce.doc/: BINARY-LICENSE.txt  abstract.tex  acknowl.tex  aprop.tex  cfrac.tex  command.tex  convert.tex  exprn.tex  index.html  inter.tex  intro.tex  macros.tex  maintain.tex  matrix.tex  oper2.tex  polyrat.tex  progstr.tex  r38_0001.html  r38_0050.html  r38_0100.html  r38_0150.html  r38_0200.html  r38_0250.html  r38_0300.html  r38_0350.html  r38_0400.html  r38_0450.html  r38_0500.html  r38_0550.html  r38_0600.html  r38_0650.html  r38_idx.html  rememb.tex  rlisp88.tex  rlispref.tex  solve.tex  structr.tex  subst.tex  util.tex
csl/support-packages/: README.autoconf  README.building  README.dejavu  README.distorm  README.fireflysung  README.fireflysung-and-sazanami  README.fox  README.fxex  README.gnuplot  README.m4  README.necessary-updates  README.tetex  README.wxWidgets  build-all.sh  build-fox-1.6.sh  build-fox-cygwin-1.6.sh  build-fox-debug-1.6.sh  build-fox-debug-cygwin-1.6.sh  build-fox-debug-mingw64-1.6.sh  build-fox-debug-win64-1.6.sh  build-fox-m32-1.6.sh  findos.sh  (+12 more)
psl/: Makefile.am  Makefile.in  PSL_improvements.csv  README.PSL  aclocal.m4  boot.sl  bootstrap.sh  build.sh  configure  configure.ac  coremodule.bat  coremodule.sh  dbuild.sl  dbuild2.sl  make-mac-psl.sh  make-psl.sh  make-reduce.bat  make-reduce.sh  make.sh  mkred2.sl  mkredpsl.dat.for.vista  mkredpsl.sl  noncoremodule.bat  noncoremodule.sh  pslcompat.sl  redpsl  reduce.img.bat  reduce.img.dat.bat  reduce.img.sh  reduce.psl  remake  saveimage.sh  update_psl
scripts/: Makefile.am  README-BIN  README.here.sh.txt  aclocal.m4  addlicense.c  alias.sh  alt-fedora-sanity-check.sh  brew-sanity-check.sh  caseclash.list  caseclash.red  caseclash.sh  cfdevel.sh  check-cygwin.sh  check1.sh  checkdeps.sh  chop.sh  clash.red  clash.sh  cleanup.sh  commit.sh  configure  configure.ac  configver.ac  copy-to-xmpl.sh  croncheck.sh  croncheck1.sh  cronjob.howto  crontab.entry  csl-sanity-check.sh  cslhere.sh  cygwin-sanity-check.sh  dist.sh  dot-snapshots  fedora-sanity-check.sh  filter.sh  finddirs.sh  findhost.sh  findos.sh  gccdefs.sh  gentoo-sanity-check.sh  (+77 more)
(+10126 files in other folders)
